--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"private": true,
 	"type": "module",
+	"scripts": {
+		"start": "node --env-file=.env contributions.js"
+	},
 	"devDependencies": {
 		"@hyperupcall/eslint-config": "^0.6.0",
 		"@hyperupcall/markdownlint-config": "^0.3.2",
