--- a/package.json
+++ b/package.json
@@ -2,19 +2,35 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"start": "node --env-file=.env contributions.js"
+		"start": "node --env-file=.env contributions.js",
+		"format": "prettier --check .",
+		"lint": "eslint ."
 	},
 	"devDependencies": {
-		"@hyperupcall/eslint-config": "^0.6.0",
+		"@eslint-community/eslint-plugin-eslint-comments": "^4.1.0",
+		"@hyperupcall/eslint-config": "^0.11.0",
 		"@hyperupcall/markdownlint-config": "^0.3.2",
 		"@hyperupcall/prettier-config": "^0.7.0",
-		"eslint": "^8.54.0",
-		"eslint-config-prettier": "^9.0.0",
+		"@tsconfig/node20": "^20.1.2",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-markdown": "^3.0.1",
+		"eslint-plugin-mdx": "^2.3.2",
+		"eslint-plugin-n": "^16.6.1",
+		"eslint-plugin-no-unsanitized": "^4.0.2",
+		"eslint-plugin-perfectionist": "^2.5.0",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-regexp": "^2.1.2",
+		"eslint-plugin-security": "^2.1.0",
+		"eslint-plugin-unicorn": "^50.0.1",
 		"markdownlint": "^0.32.1",
-		"prettier": "^3.1.0",
+		"prettier": "^3.1.1",
 		"prettier-plugin-pkg": "^0.18.0"
 	},
 	"dependencies": {
+		"ansi-escapes": "^6.2.0",
+		"lodash": "^4.17.21",
 		"octokit": "^3.1.2"
 	}
 }
